add sql-tm1 bench tests, refactor sql-tm1 copy

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -5,6 +5,13 @@ user=admin
 password=
 ssl=False
 
+[testbench]
+address=dev.knowledgeseed.local
+port=5379
+user=admin
+password=
+ssl=False
+
 [mssqlsrv]
 host=localhost
 port=5835
@@ -13,9 +20,10 @@ password=apple
 connection_type=mssql
 database=HRDEMO
 
-[testbench]
-address=dev.knowledgeseed.local
-port=5379
-user=admin
-password=
-ssl=False
+[testbench_mssql]
+host=localhost
+port=5835
+username=admin
+password=apple
+connection_type=mssql
+database=BENCHMARK
