dockerize integration tests

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -27,3 +27,11 @@ username=admin
 password=apple
 connection_type=mssql
 database=BENCHMARK
+
+[testbench_postgres]
+host=localhost
+port=5436
+username=postgres
+password=postgres
+connection_type=postgresql
+database=postgres
