update publish pipeline

--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Build
         run: python -m build
 
-      #- name: Publish to PyPI
-      #  run: python -m twine upload dist/* -u__token__ -p${{ secrets.PYPI_TOKEN }} --verbose
+      - name: Publish to PyPI
+        run: python -m twine upload dist/* -u__token__ -p${{ secrets.PYPI_TOKEN }} --non-interactive --verbose
