add test for df casting in csv to tm1 data transfer

--- a/tests/test_unit.yaml
+++ b/tests/test_unit.yaml
@@ -1315,6 +1315,18 @@ test_mssql_loader_replace:
     table_name: "Write Test Table"
     if_exists: "append"
 
+test_dataframe_casting_for_csv_file:
+  -
+    dataframe: {
+        "Versions": ["Base Plan", "Plan1", "Plan2"],
+        "Orgunit": ["ASD123", "ASD123", "XYZ123"],
+        "Value": [1, 0, 1],
+    }
+    cube_dims: ["Versions", "Orgunit"]
+  -
+    dataframe: {}
+    cube_dims: ["Versions", "Orgunit"]
+
 test_dataframe_to_csv:
   -
     data_dataframe: {
