--- a/tests/test_unit.yaml
+++ b/tests/test_unit.yaml
@@ -27,7 +27,6 @@ test_mdx_filter_to_dictionary:
 
 test_get_kwargs_dict_from_set_mdx_list_success:
   -
-    # Basic example from prompt
     set_mdx_list: [
       "{[Periods].[Periods].[2024]}",
       "{Tm1FilterbyLevel({Tm1DrillDownMember({[Versions].[All Versions]}, ALL, RECURSIVE)}, 0)}"
@@ -37,7 +36,6 @@ test_get_kwargs_dict_from_set_mdx_list_success:
       "versions": "{Tm1FilterbyLevel({Tm1DrillDownMember({[Versions].[All Versions]}, ALL, RECURSIVE)}, 0)}"
     }
   -
-    # Case variation and spaces in dimension name
     set_mdx_list: [
       "{[ Product Category ] . [ Members ] . [ All ] }",
       "{ [TIME DIM   ].[H1].[Q1]}"
@@ -57,26 +55,18 @@ test_get_kwargs_dict_from_set_mdx_list_success:
       "scenario1": "{[Scenario 1].[Actual]}"
     }
   -
-    # Duplicate keys (after normalization) - last one should win
-    set_mdx_list: [
-      "{[ Measures ].[Sales Amount]}",
-      "{[ Measures].[Units Sold]}" # This should overwrite the previous "measures"
-    ]
+    set_mdx_list: ["Tm1SubsetAll([Periods])", "Tm1SubsetAll([Versions].[Financial])"]
     expected_kwargs: {
-      "measures": "{[ Measures].[Units Sold]}"
+      "periods": "Tm1SubsetAll([Periods])",
+      "versions": "Tm1SubsetAll([Versions].[Financial])"
     }
   -
-    # Duplicate keys (after normalization, different original case/spacing) - last one should win
-    set_mdx_list: [
-      "{[department].[HR]}",
-      "{[ Department ].[Finance]}" # This should overwrite the previous "department"
-    ]
+    set_mdx_list: [ "Tm1FilterByLevel(Tm1SubsetAll([Periods]), 0)",
+                    "Tm1FilterByLevel(Tm1DrillDownmember([Versions].[Versions].[All Versions], ALL, RECURSIVE), 0)"]
     expected_kwargs: {
-      "department": "{[ Department ].[Finance]}"
+      "periods": "Tm1FilterByLevel(Tm1SubsetAll([Periods]), 0)",
+      "versions": "Tm1FilterByLevel(Tm1DrillDownmember([Versions].[Versions].[All Versions], ALL, RECURSIVE), 0)"
     }
-  -
-    set_mdx_list: [ ]
-    expected_kwargs: { }
 
 test__get_kwargs_dict_from_set_mdx_list_fail:
   -
@@ -89,7 +79,6 @@ test__get_kwargs_dict_from_set_mdx_list_fail:
     mdx_expressions: ["{[AnotherDim].[Member]}", null]
     expected_exception: "TypeError"
   -
-    # Mix of valid and invalid/non-matching strings
     mdx_expressions: [
       "{[Geography].[City].[London]}",
       "This is just a string",
@@ -127,6 +116,21 @@ test__get_kwargs_dict_from_set_mdx_list_fail:
   -
     mdx_expressions: [None, "{[ValidDim].[Value]}"]
     expected_exception: "ValueError"
+  -
+    mdx_expressions: ["{[ValidDim].[Value]}", "{[ValidDim].[Value]}"]
+    expected_exception: "ValueError"
+  -
+    mdx_expressions: []
+    expected_exception: "ValueError"
+  -
+    mdx_expressions: ["{[].[element]}"]
+    expected_exception: "ValueError"
+  -
+    mdx_expressions: [ "Tm1FilterBylevel(.[element]), 0)}" ]
+    expected_exception: "ValueError"
+  -
+    mdx_expressions: "invalidlist"
+    expected_exception: "TypeError"
 
 test_get_dimensions_from_set_mdx_list_success:
   -
@@ -136,37 +140,26 @@ test_get_dimensions_from_set_mdx_list_success:
       ]
     expected_dimensions: ["Periods", "Versions"]
   -
-    mdx_sets: [
-        "{[Time].[Year].[2023]}",
-        "invalid string",
-        "{[ Geography ].[ Continent ].[Asia]}",
-        "{[Product]}"
-      ]
-    expected_dimensions: ["Time", "Geography", "Product"]
+    mdx_sets: ["Tm1FilterByLevel(Tm1SubsetAll([Periods]), 0)",
+               "Tm1FilterByLevel(Tm1DrillDownmember([Versions].[Versions].[All Versions], ALL, RECURSIVE), 0)"]
+    expected_dimensions: ["Periods", "Versions"]
   -
-    mdx_sets: [
-        "{ [ Measures ] . [ Sales ] }",
-        "{ [ Measures ] . [ Units ] }"
-      ]
-    expected_dimensions: ["Measures", "Measures"]
-  -
-    mdx_sets: []
-    expected_dimensions: []
-  -
-    mdx_sets: null
-    expected_dimensions: []
-  -
-    mdx_sets: ["No Match", "Another Miss"]
-    expected_dimensions: []
-  -
-    mdx_sets: ["{[Dim1]}", null, "{[Dim2].[Hier]}", "{[ Dim 3 ]}"]
-    expected_dimensions: ["Dim1", "Dim2", "Dim 3"]
-  -
-    mdx_sets: ["{[].[Element]}", "{[ Dim4 ]}"]
-    expected_dimensions: ["Dim4"]
+    mdx_sets: [ "Tm1SubsetAll([  Periods    ])", "Tm1SubsetAll([Versions].[Financial])" ]
+    expected_dimensions: ["Periods", "Versions"]
 
 
 test_get_dimensions_from_set_mdx_list_failure:
+  -
+    mdx_sets: []
+    expected_exception: "ValueError"
+    expected_message_part: "Set mdx list cannot be empty"
+  -
+    mdx_sets: [
+      "{ [ Measures ] . [ Sales ] }",
+      "{ [ Measures ] . [ Units ] }"
+    ]
+    expected_exception: "ValueError"
+    expected_message_part: "Duplicate set mdxs for a dimension"
   -
     mdx_sets: "not a list"
     expected_exception: "TypeError"
@@ -183,6 +176,19 @@ test_get_dimensions_from_set_mdx_list_failure:
     mdx_sets: [!!binary "Ynl0ZXM=", "{[Dim2]}"]
     expected_exception: "TypeError"
     expected_message_part: "Expected elements of mdx_sets to be strings"
+  -
+    mdx_sets: [ "invalidmdx", "invalidmdx2" ]
+    expected_exception: "ValueError"
+    expected_message_part: "The mdx invalidmdx is invalid"
+  -
+    mdx_sets: ["{[ValidDim].[Value]}", "invalidmdx" ]
+    expected_exception: "ValueError"
+    expected_message_part: "The mdx invalidmdx is invalid"
+  -
+    mdx_sets: [ "{[].[Value]}", "{[ValidDim].[Value]}" ]
+    expected_exception: "ValueError"
+    expected_message_part: "The mdx {[].[Value]} is invalid"
+
 
 
 test_generate_cartesian_product_success:
