add airflow executor test dags

--- a/tests_integration_airflow/Dockerfile
+++ b/tests_integration_airflow/Dockerfile
@@ -3,7 +3,7 @@ RUN pip install apache-airflow-providers-microsoft-mssql
 RUN pip install apache-airflow[odbc]
 RUN pip install airflow-provider-tm1>=0.5.1
 ADD plugins/tm1_bedrock_py-0.4.1-py3-none-any.whl .
-RUN pip install tm1_bedrock_py-0.4.1-py3-none-any.whl[airflow-postgres]
+RUN pip install tm1_bedrock_py-0.4.1-py3-none-any.whl[airflow,postgres]
 #ADD airflow_provider_tm1 /tmp/airflow_provider_tm1
 #ADD pyproject.toml /tmp/pyproject.toml
 #ADD setup.py /tmp/setup.py
